--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-REACT_APP_LOCALHOST_API_URL=http://localhost:8080/api
+REACT_APP_LOCALHOST_API_URL=http://localhost:8080/api/v1
