Added system config pages for cash book and student information.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": ["src", "src/views/system-config/payment-methods/PaymentMethodsGrid.js"]
+  "include": ["src"]
 }
