--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coreui/coreui-pro-react-admin-template",
   "version": "4.7.0",
-  "description": "CoreUI PRO React Admin Template",
+  "description": "Math Hub Information System",
   "homepage": ".",
   "bugs": {
     "url": "https://github.com/coreui/coreui-pro-react-admin-template/issues"
