--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.3.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.21.1",
     "redux": "4.2.1",
