--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.3.2",
     "core-js": "^3.31.1",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
