Updated theme to version 5 so that we do not fall behind in any improvements in the recent version of the theme.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "@coreui/coreui-pro-react-admin-template",
-  "version": "4.7.0",
+  "name": "@coreui/coreui-pro-react-admin-template-cra",
+  "version": "5.0.0",
   "description": "Math Hub Information System",
+  "config": {
+    "theme": "bright",
+    "zipPrefix": ".zip/coreui-pro-react-admin-template-theme",
+    "bundler": "cra"
+  },
   "homepage": ".",
   "bugs": {
-    "url": "https://github.com/coreui/coreui-pro-react-admin-template/issues"
+    "url": "https://github.com/coreui/coreui-pro-react-admin-template-cra/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-pro-react-admin-template.git"
+    "url": "git@github.com:coreui/coreui-pro-react-admin-template-cra.git"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
@@ -20,47 +25,54 @@
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "zip": "git archive -o coreui-pro-react-admin-template-light-theme-3-v$npm_package_version.zip -9 HEAD"
+    "zip": "git archive -o $npm_package_config_zipPrefix-$npm_package_config_theme-$npm_package_config_bundler-v$npm_package_version.zip -9 HEAD"
   },
   "dependencies": {
-    "@coreui/chartjs": "^3.1.2",
-    "@coreui/coreui-pro": "^4.5.0",
+    "@coreui/chartjs": "^4.0.0",
+    "@coreui/coreui-pro": "^5.0.0",
     "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.1.0",
-    "@coreui/react-chartjs": "^2.1.3",
-    "@coreui/react-pro": "^4.12.0",
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react-chartjs": "^3.0.0",
+    "@coreui/react-pro": "^5.0.0",
     "@coreui/utils": "^2.0.2",
-    "@fullcalendar/daygrid": "^5.11.3",
-    "@fullcalendar/interaction": "^5.11.3",
-    "@fullcalendar/react": "^5.11.3",
-    "@fullcalendar/timegrid": "^5.11.3",
-    "@react-google-maps/api": "^2.18.1",
-    "axios": "^1.6.3",
-    "chart.js": "^3.9.1",
-    "classnames": "^2.3.2",
-    "core-js": "^3.31.1",
-    "http-proxy-middleware": "^2.0.6",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.2",
+    "classnames": "^2.5.1",
+    "core-js": "^3.36.1",
+    "http-proxy-middleware": "^3.0.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
-    "react-imask": "^7.3.0",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.21.1",
-    "redux": "4.2.1",
-    "simplebar-react": "^2.4.3"
+    "react-i18next": "^14.1.0",
+    "react-imask": "^7.6.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "redux": "5.0.1",
+    "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "2.8.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.5",
     "react-scripts": "5.0.1",
-    "sass": "1.63.6",
-    "web-vitals": "^3.3.2"
+    "sass": "^1.72.0",
+    "web-vitals": "^3.5.2"
   },
   "engines": {
     "node": ">=10",
