--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
